Пофиксили меню и шапку, добавили контент.

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body {
   padding-left: 32px;
   padding-right: 70px;
   margin-bottom: 30px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 99;
 }
 .menu-button {
   padding: 0;
@@ -92,6 +98,13 @@ body {
 }
 .sidebar {
   padding-left: 32px;
+  position: fixed;
+  left: 0;
+  top: 114px;
+  height: calc(100% - 114px);
+  overflow-y: auto;
+  width: 17%;
+  background-color: #fff;
 }
 .nav-menu {
   margin-top: 0;
@@ -130,4 +143,143 @@ body {
   font-size: 18px;
   line-height: 23px;
   margin-bottom: 30px;
+}
+.content {
+  margin-top: 85px;
+  padding-left: 19%;
+  width: 100%;
+  height: 500px;
+  padding-top: 30px;
+}
+.swiper-container {
+  min-width: 1660px;
+}
+.channel {
+  position: relative;
+  margin-bottom: 50px;
+}
+.channel-title {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #19202c;
+  font-style: bold;
+  font-size: 26px;
+  line-height: 33px;
+  margin-bottom: 30px;
+}
+.channel-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.channel-text {
+  margin-left: 20px;
+}
+.video-card {
+  width: 250px;
+}
+.video-thumb {
+  position: relative;
+  width: 250px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 14px;
+}
+.thumbnail {
+  width: 250px;
+  height: 150px;
+  object-fit: cover;
+}
+.video-duration {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 12px;
+  color: #fff;
+  font-style: 14px;
+  line-height: 18px;
+  padding: 3px 9px;
+}
+.video-title {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #19202c;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+.video-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+  line-height: 16px;
+  color: #c2c2c2;
+}
+.video-counter {
+  display: flex;
+}
+.video-views {
+  margin-right: 5px;
+}
+.video-views::after {
+  content: "";
+  width: 2px;
+  height: 2px;
+  background-color: #c2c2c2;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.slider-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 66px;
+  position: absolute;
+  right: 12%;
+  top: 15px;
+}
+.channel-button {
+  cursor: pointer;
+}
+.channel {
+  position: relative;
+  margin-bottom: 50px;
+}
+.video-card-large {
+  width: 540px;
+}
+.video-thumb-large {
+  width: 540px;
+  height: 250px;
+}
+.thumbnail-large {
+  width: 540px;
+  height: 250px;
+}
+.fd-buttons {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 12%;
+  top: 15px;
+}
+
+.fd-buttons .slider-buttons {
+  position: static;
+}
+
+.button-subscribe {
+  padding: 10px 20px;
+  background-color: #f00;
+  color: #fff;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 20px;
+  border: none;
+  margin-right: 40px;
+  cursor: pointer;
 }
